--- a/portfolio.html
+++ b/portfolio.html
@@ -1,71 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href= "/Users/austinperez/Desktop/austin-bootstrap/styles.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Austin Perez About</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="/Users/austinperez/Desktop/updated -bootstrap-portfolio/styles.css"
+    />
+  </head>
 
-<body>
-    
-<header>
- <section class ="container-fluid">
-    <div class ="row">
-        <div class="col-md-12">
-            <nav class="navbar fixed-top navbar-light" style="background-color:slategrey; opacity: .9;">
-                <div class= "name-big">
-                    Ausitn Perez
+  <body>
+    <header>
+      <section class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <nav
+              class="navbar fixed-top navbar-light"
+              style="background-color: slategrey; opacity: 0.9"
+            >
+              <div class="name-big">Ausitn Perez</div>
+              <nav
+                class="navbar navbar-expand-lg navbar-light"
+                style="background-color: slategrey"
+              >
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#navbarNav"
+                  aria-controls="navbarNav"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="contact.html">
+                        <div class="contact-font">Contact</div>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="portfolio.html">
+                        <div class="port-font">Portfolio</div>
+                      </a>
+                    </li>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="index.html">
+                        <div class="about-font">About</div>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
-                <nav class="navbar navbar-expand-lg navbar-light" style="background-color:slategrey;">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item ">
-                          <a class="nav-link" href="contact.html"> <div class="contact-font">Contact</div> </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="portfolio.html"> <div class="port-font">Portfolio</div> </a>
-                        </li>
-                        <li class="nav-item active">
-                          <a class="nav-link" href="index.html"> <div class="about-font">About</div> </a>
-                        </li>
-                      </ul>
-                    </div>
-                </nav>
+              </nav>
             </nav>
+          </div>
         </div>
-    </div>
- </section>
-</header>
+      </section>
+    </header>
 
-<br>
-<br>
-<br>
+    <br />
+    <br />
+    <br />
 
-<section class= "container-md">
-    <div class = "row">
-        <div class= "col-lg-6" style="background-color:slategrey;">
-           <div class= "portfolio-me">Portfolio</div>
-           <img id="space-tree" src="https://images.unsplash.com/photo-1450631835004-9b95ff5cd66f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" class="img-fluid" alt="Responsive image">
-           <img id="shooting-sky" src="https://images.unsplash.com/photo-1519078327-cc614a22612e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" class="img-fluid" alt="Responsive image">
-           <img id="ice-road" src="https://images.unsplash.com/photo-1602851995981-7b19adbd2d01?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=666&q=80" class="img-fluid" alt="Responsive image">
+    <section class="container-md">
+      <div class="row">
+        <div class="col-lg-8" style="background-color: slategrey">
+          <div class="portfolio-me">Portfolio</div>
+
+          <img class="img-responsive" width="100%" src="images/GitHub.jpeg" />
         </div>
-    </div>
-</section>
+        <div class="col-lg-4 my-col" style="background-color: slategrey">
+          <a target="_blank" href="https://github.com/AustinPerez760">
+            GitHub
+          </a>
+          LinkeDin: Email: Phone:
+        </div>
+      </div>
+    </section>
 
-    <footer>
-   
-    </footer>
+    <footer></footer>
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
