added card row to portfolio , added links to personal sites,

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,10 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="/Users/austinperez/Desktop/updated -bootstrap-portfolio/styles.css"
-    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -81,13 +78,96 @@
         <div class="col-lg-8" style="background-color: slategrey">
           <div class="portfolio-me">Portfolio</div>
 
-          <img class="img-responsive" width="100%" src="images/GitHub.jpeg" />
+          <img
+            class="img-responsive austin-img"
+            width="100%"
+            src="images/GitHub.jpeg"
+          />
         </div>
         <div class="col-lg-4 my-col" style="background-color: slategrey">
-          <a target="_blank" href="https://github.com/AustinPerez760">
-            GitHub
-          </a>
-          LinkeDin: Email: Phone:
+          <p style="color: black">
+            Follow me on
+            <a target="_blank" href="https://github.com/AustinPerez760">
+              GitHub
+            </a>
+          </p>
+
+          <p style="color: black">
+            Follow me on
+            <a target="_blank" href=""> Linkedin</a>
+          </p>
+          <p style="color: black">Email: Austin.perez760@gmail.com</p>
+          <p style="color: black">Phone: 123-456-7890</p>
+          <a href="images/Austin Perez Dev Resume.pdf" download>
+            Download Resume!</a
+          >
+        </div>
+
+        <div class="col-lg-12" style="background-color: slategrey">
+          <div class="card-group">
+            <div class="card">
+              <img
+                src="images/brewfinder2.jpeg"
+                class="card-img-top brew-pic"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Quickly find a new Brewery</h5>
+                <p class="card-text">
+                  The Best Ever Brewery Finder allows individuals to quickly
+                  find breweries simply by typing in your zipcode
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"> </small>
+                <a target="_blank" href="https://github.com/AustinPerez760">
+                  GitHub
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="images/striveRite2.jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Responsibility the fun way</h5>
+                <p class="card-text">
+                  StriveRite is a interactive chore responsabilty application
+                  that allows parents to monitor there childrens progress in
+                  completing assigned tasks
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"></small>
+                <a target="_blank" href="https://github.com/AustinPerez760">
+                  GitHub
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="images/codeQuiz.jpeg"
+                class="img-responsive"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">A quiz fit for a champion</h5>
+                <p class="card-text">
+                  Quiz of champions is a randomized multiple choice quiz that
+                  highlights some of the best accomplishments within the sports
+                  world
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"></small>
+                <a target="_blank" href="https://github.com/AustinPerez760">
+                  GitHub
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
