--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="/Users/austinperez/Desktop/updated -bootstrap-portfolio/styles.css"
-    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
