--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,10 @@
               </div>
               <div class="card-footer">
                 <small class="text-muted"> </small>
-                <a target="_blank" href="https://github.com/AustinPerez760">
+                <a
+                  target="_blank"
+                  href="https://austinperez760.github.io/The_BEST_Brewery_Finder/"
+                >
                   GitHub
                 </a>
               </div>
@@ -141,8 +144,8 @@
               </div>
               <div class="card-footer">
                 <small class="text-muted"></small>
-                <a target="_blank" href="https://github.com/AustinPerez760">
-                  GitHub
+                <a target="_blank" href="https://striverite.net/">
+                  StriveRite
                 </a>
               </div>
             </div>
