fixed quiz image on third card of portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -150,11 +150,7 @@
               </div>
             </div>
             <div class="card">
-              <img
-                src="images/codeQuiz.jpeg"
-                class="img-responsive"
-                alt="..."
-              />
+              <img src="images/codeQuiz.jpeg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">A quiz fit for a champion</h5>
                 <p class="card-text">
