added link to Linkedin on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,12 @@
 
           <p style="color: black">
             Follow me on
-            <a target="_blank" href=""> Linkedin</a>
+            <a
+              target="_blank"
+              href="www.linkedin.com/in/austin-perez-3b1899205"
+            >
+              Linkedin</a
+            >
           </p>
           <p style="color: black">Email: Austin.perez760@gmail.com</p>
           <p style="color: black">Phone: 123-456-7890</p>
